--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.10",
+    "@mui/styled-engine": "^6.1.10",
+    "axios": "^1.7.9",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
@@ -19,6 +25,7 @@
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.15.0",
+    "react-tooltip": "^5.28.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
