--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine": "^6.1.10",
     "axios": "^1.7.9",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.1",
@@ -29,7 +31,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
