--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine": "^6.1.10",
+    "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
